Fix UI layout issues on mobile
TODO: Fix menu size issues on desktop

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -91,6 +91,7 @@ h5 {
   align-content: center;
   position: relative;
   margin-top: 0%;
+  width: 100%;
   /* margin-bottom: 25%; */
 
   /* height: auto; */
@@ -103,7 +104,7 @@ h5 {
   height: auto;
   pointer-events: none;
   z-index: 12;
-  padding: 25px 25px 0px 25px;
+  padding: 2%;
 }
 
 .game-screen canvas {
@@ -112,24 +113,41 @@ h5 {
   background-image: url("../images/bg01-flattened.png");
   background-size: cover;
   background-position: center;
-  top: 0;
-  width: 100%;
+  right: auto;
+  width: 86%;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
   aspect-ratio: 16 / 9;
   image-rendering: pixelated;
   /* border: 2px solid magenta; */
 }
 
 #overlay {
-  display: flex;
   position: absolute;
-  width: 85%;
-  top: 15%;
-  left: 50%;
+  display: flex;
+  right: auto;
+  width: 80%;
+  /* max-height: 60%; */
+  margin-top: 12%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  /* aspect-ratio: 16 / 9; */
+  /* width: 80%; */
+  /* margin-top: 10%; */
   /* left: 50%; position the top  edge of the element at the middle of the parent */
-  height: auto;
+  /* height: auto;
+  max-height: auto; */
   z-index: 10;
   padding: 0;
-  transform: translate(-50%, 0);
+  overflow: hidden;
+  /* transform: translate(-50%, 0); */
   /* margin-top: 6%; */
   /* transform: translate(-50%, 0%); */
   /* transform: translate(-50%, -50%); */
@@ -144,7 +162,7 @@ h5 {
   width: 80%;
   height: 10%;
   margin: 30px auto 10px auto;
-  padding: 8vw 8vw 4vw 8vw;
+  padding: 8% 8% 4% 8%;
   border: 0.6vw solid black;
   border-radius: 2.5vw;
   outline: 0.6vw solid white;
@@ -191,7 +209,7 @@ button {
   display: inline-block;
   align-items: center;
   align-self: center;
-  padding: 1vw 1.2vw 0.6vw 1.2dvw;
+  padding: 1% 1.2% 0.6% 1.2%;
   border: 0.6vw solid black;
   border-radius: 1.5vw;
   outline: 0.4vw solid white;
@@ -201,7 +219,7 @@ button {
     var(--clr-gold) 80%
   );
   font-family: Coiny, sans-serif;
-  font-size: 2vw;
+  font-size: 2rem;
   font-weight: normal;
   text-align: center;
   text-transform: uppercase;
@@ -218,7 +236,7 @@ button {
   right: 5vw;
   top: 5vw;
   background: var(--clr-green);
-  font-size: 4vw;
+  font-size: 2rem;
   transform: rotate(5deg);
   transition: all 0.1s;
 }
@@ -247,7 +265,7 @@ button {
 
 #menu-screen h2 {
   padding: 1.7vw 1.8vw 0.8vw;
-  font-size: calc(20px + 4vw);
+  font-size: 4rem;
   font-weight: normal;
   text-align: center;
   text-shadow: -3px -3px 0 #fff, 3px -3px 0 #fff, -3px 3px 0 #fff,
@@ -291,7 +309,7 @@ button {
   height: calc(10vw - 1.2vw);
   border: none;
   background: red;
-  font-size: 2vw;
+  font-size: 2rem;
   font-weight: 200;
   text-align: center;
   text-transform: uppercase;
@@ -415,7 +433,7 @@ a {
   margin: 0;
   padding: 0 2vw 2vw 2vw;
   font-family: Silkscreen, sans-serif;
-  font-size: 7vw;
+  font-size: 7rem;
   font-weight: 400;
   text-align: center;
   text-transform: uppercase;
@@ -484,7 +502,7 @@ a {
 }
 #hud-score {
   font-family: Coiny, system-ui;
-  font-size: 6vw;
+  font-size: 3rem;
   text-shadow: -3px -3px 0 #fff, 3px -3px 0 #fff, -3px 3px 0 #fff,
     3px 3px 0 #fff;
   color: var(--clr-violet);
@@ -521,12 +539,13 @@ a {
 }
 
 #ui--controller-menu-buttons {
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 4vw;
 }
 
 #control--dpad {
   height: auto;
-  width: 25%;
+  width: 35%;
   vertical-align: middle;
   padding-left: 0;
   margin-left: 0;
@@ -536,7 +555,7 @@ a {
 
 #control--button-primary {
   height: auto;
-  width: 25%;
+  width: 35%;
   vertical-align: middle;
   /* max-width: 30%; */
   /* border: 1px solid magenta;  */
@@ -545,7 +564,7 @@ a {
 #control--select-button,
 #control--start-button {
   height: auto;
-  max-width: 40%;
+  max-width: 25%;
   max-height: auto;
   align-self: center;
   padding-top: 0vh;
